<resources>
    <string name="app_name">Companion for Grim Dawn</string>
    <string name="too_many_points_message">Adding this devotion will use more than 55 points. Remove something else
        first.
    </string>
    <string name="too_many_points_title">Not Enough Points</string>
    <string name="cannot_remove_title">Cannot Remove</string>
    <string name="cannot_remove_message">The following devotion(s) depend on this:</string>
    <string name="points_used">Points Used:</string>
    <string name="toolbar_title">Companion For Grim Dawn</string>
    <string name="filter">Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="show_summary">Show Summary</string>
    <string name="summary">Summary</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="starred">Starred</string>
    <string name="enforce_rules">Enforce Rules</string>
    <string name="match_any">Match Any</string>
    <string name="match_all">Match All</string>
    <string name="match_requirements">Match Requirements</string>
    <string name="match_rewards">Match Rewards</string>
    <string name="primordial">Primordial</string>
    <string name="order">Order</string>
    <string name="eldritch">Eldritch</string>
    <string name="chaos">Chaos</string>
    <string name="ascendant">Ascendant</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
</resources>
