<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/filter" android:icon="@drawable/ic_filter_list" app:showAsAction="ifRoom"
          android:id="@+id/action_filter"/>

    <item
            android:title="@string/show_summary"
            app:showAsAction="never"
            android:id="@+id/action_show_summary" />

    <item
            android:id="@+id/action_enforce_rules"
            android:checkable="true"
            android:title="@string/enforce_rules"/>

    <item
            android:title="@string/save"
            app:showAsAction="never"
            android:id="@+id/action_save" />

    <item
            android:title="@string/load"
            app:showAsAction="never"
            android:id="@+id/action_load" />

    <item android:title="@string/reset" app:showAsAction="never" android:id="@+id/action_reset"/>

    <item android:title="@string/search" android:icon="@drawable/ic_search" app:showAsAction="always"
          android:id="@+id/action_search"/>
</menu>